# seaglass-alpha

./: README.md
.claude-plugin/: marketplace.json
cli/: README.md  install.sh  pyproject.toml
cli/seaglass/: __init__.py  __main__.py  cli.py  client.py  install.py  managed_block.py
plugin/: README.md
plugin/mcpb/: manifest.json
plugin/plugins/seaglass/: .mcp.json
plugin/plugins/seaglass-cli/.claude-plugin/: plugin.json
plugin/plugins/seaglass-cli/.codex-plugin/: plugin.json
plugin/plugins/seaglass-cli/hooks/: session-start.sh  transcript-flush.sh
plugin/plugins/seaglass-cli/skills/seaglass-memory-cli/: SKILL.md
plugin/plugins/seaglass-cli/skills/seaglass-memory-cli/reference/: sensitivity.md
plugin/plugins/seaglass-hermes/: README.md  hermes-plugin.json
plugin/plugins/seaglass-hermes/hooks/: on_session_end.sh  on_session_start.sh  post_llm_call.sh  pre_llm_call.sh
plugin/plugins/seaglass/.claude-plugin/: plugin.json
plugin/plugins/seaglass/.codex-plugin/: mcp.json  plugin.json
plugin/plugins/seaglass/hooks/: hooks.json  session-end.sh  transcript-flush.sh
plugin/plugins/seaglass/hooks/lib/: runtime.sh
plugin/plugins/seaglass/skills/checkpoint/: SKILL.md
plugin/plugins/seaglass/skills/recall/: SKILL.md
plugin/plugins/seaglass/skills/seaglass-memory/: SKILL.md
plugin/plugins/seaglass/skills/seaglass-memory/reference/: sensitivity.md
