[project]
name = "seaglass-cli"
version = "0.3.0"
description = "Command-line client for the Seaglass personal memory layer."
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "Seaglass" }]
readme = "README.md"

[project.scripts]
seaglass = "seaglass.cli:main"

[project.urls]
Homepage = "https://github.com/drummel/seaglass-alpha"
Source = "https://github.com/drummel/seaglass-alpha/tree/main/cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seaglass"]
